tests/src/frontend/visibility/invalid/protected_constructor_3.sk
class X protected () {
  static fun new(): this {
    static()
  }
}

class Z() {
  static fun newX(): X {
    X()
  }
}
